=======
CHANGES
=======

The 1.2 line (and higher) supports Zope 3.4/ZODB 3.8.  The 1.1 line supports
Zope 3.3/ZODB 3.7.

1.4.1 (unreleased)
------------------

* Add FieldIndex-like sorting support for the ValueIndex.


1.4.0 (2009-02-07)
------------------

Bugs fixed
~~~~~~~~~~

* Fixed a typo in ValueIndex addform and addMenuItem

* Use ``zope.container`` instead of ``zope.app.container``.

* Use ``zope.keyreference`` instead of ``zope.app.keyreference``.

* Use ``zope.intid`` instead of ``zope.app.intid``.

* Use ``zope.catalog`` instead of ``zope.app.catalog``.


1.3.0 (2008-09-10)
------------------

Features added
~~~~~~~~~~~~~~

* Added hook point to allow extent catalog to be used with local UID sources.


1.2.0 (2007-11-03)
------------------

Features added
~~~~~~~~~~~~~~

* Updated package meta-data.

* zc.catalog now can use 64-bit BTrees ("L") as provided by ZODB 3.8.

* Albertas Agejavas (alga@pov.lt) included the new CallableWrapper, for
  when the typical Zope 3 index-by-adapter story
  (zope.app.catalog.attribute) is unnecessary trouble, and you just want
  to use a callable.  See callablewrapper.txt.  This can also be used for
  other indexes based on the zope.index interfaces.

* Extents now have a __len__.  The current implementation defers to the
  standard BTree len implementation, and shares its performance
  characteristics: it needs to wake up all of the buckets, but if all of the
  buckets are awake it is a fairly quick operation.

* A simple ISelfPoulatingExtent was added to the extentcatalog module for
  which populating is a no-op.  This is directly useful for catalogs that
  are used as implementation details of a component, in which objects are
  indexed explicitly by your own calls rather than by the usual subscribers.
  It is also potentially slightly useful as a base for other self-populating
  extents.


1.1.1 (2007-3-17)
-----------------

Bugs fixed
~~~~~~~~~~
